<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <com.yaer.remittance.view.CustomTitlebar
        android:id="@+id/ct_auction_rule"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main_tone"
        app:left_button_image="@drawable/return_left"
        app:right_button_textColor="@color/text_1_color"
        app:right_button_textSize="14sp"
        app:title_backgrounds="@color/main_tone"
        app:title_text="拍卖说明"
        app:title_textColor="@color/text_1_color"
        app:title_textSize="18sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_10"
            android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="一：参拍与出价"
                android:textColor="@color/text_1_color"
                android:textSize="@dimen/sp_16"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/hw_20_dp"
                android:text="手动出价"
                android:textColor="@color/text_1_color"
                android:textSize="@dimen/sp_14"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:text="@string/manual_bidding"
                android:textColor="@color/text_1_color"
                android:textSize="@dimen/sp_14" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/hw_20_dp"
                android:text="代理出价"
                android:textColor="@color/text_1_color"
                android:textSize="@dimen/sp_14"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:text="@string/proxy_bidding"
                android:textColor="@color/text_1_color"
                android:textSize="@dimen/sp_14" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/hw_20_dp"
                android:text="二：责任"
                android:textColor="@color/text_1_color"
                android:textSize="@dimen/sp_16"
                android:textStyle="bold" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:text="@string/about_bidding"
                android:textColor="@color/text_1_color"
                android:textSize="@dimen/sp_14" />
        </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>